--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_URL=https://grants.sls.comicrelief.com/grants
-
+REACT_APP_POSTCODE=https://api.postcodes.io/postcodes/
+REACT_APP_GRANT_GE0=https://1kfs7evxca.execute-api.eu-west-1.amazonaws.com/beta/grants-geo/?
